--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Map"
         tools:targetApi="31">
+        <activity android:name=".PlaceRecyclerViewActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
