feat: Add storing function of record list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Map"
         tools:targetApi="31">
-        <activity android:name=".PlaceRecyclerViewActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".PlaceActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
