--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31">
         <activity
             android:name=".PlaceActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".DataActivity"
             android:exported="true">
