--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Map"
         tools:targetApi="31">
         <activity
-            android:name=".PlaceActivity"
+            android:name=".presentation.PlaceActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
