--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Map"
         tools:targetApi="31"
-        android:name=".AppClass">
+        android:name=".AppClass"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
             android:name=".MapActivity"
