feat: 카카오 맵 화면 구현 및 검색 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:name=".PlaceApplication"
         android:allowBackup="true"
@@ -16,10 +15,7 @@
         android:theme="@style/Theme.Map"
         tools:targetApi="31">
         <activity
-            android:name=".view.PlaceViewModel"
-            android:exported="false" />
-        <activity
-            android:name=".view.ViewActivity"
+            android:name=".view.MapActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.PlaceViewModel"
+            android:exported="false" />
+        <activity
+            android:name=".view.ViewActivity"
+            android:exported="false"/>
+
+
     </application>
 
 </manifest>
