--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Map"
+        android:name=".Model.MyApplication"
         tools:targetApi="31">
         <activity
             android:name=".view.MainActivity"
@@ -30,7 +31,7 @@
         </activity>
 
         <meta-data
-            android:name="com.kakao.vectormap.AppKey"
+            android:name="com.kakao.sdk.APP_KEY"
             android:value="b6f4b70a2090ca9cfca380ec1ebc9c5f"/>
     </application>
 
