--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Map"
+        android:soundEffectsEnabled="true"
         tools:targetApi="31">
+        <activity
+            android:name=".SearchPlaceActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
