--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.search.MainActivity"
             android:windowSoftInputMode="adjustNothing"
             android:exported="false" />
         <activity
-            android:name=".view.MapActivity"
+            android:name=".view.map.MapActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
