--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Map"
         tools:targetApi="31">
         <activity
+            android:name=".NetworkActivity"
+            android:exported="false" />
+        <activity
             android:name=".MapActivity"
             android:exported="true">
             <intent-filter>
@@ -25,8 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlaceActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".PlaceActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
